--- a/JICHANGEAPI/ClientApp/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/auth/sign-in/sign-in.component.html
@@ -19,12 +19,7 @@
         class="bg-white grid place-items-center shadow-2 rounded-md space-y-0 p-4 w-11/12 lg:w-[30rem]"
         action=""
       >
-        <img
-          src="assets/img/logo.png"
-          class="w-40"
-          alt=""
-          srcset=""
-        />
+        <img src="assets/img/logo.png" class="w-40" alt="" srcset="" />
         <div class="w-full flex flex-col">
           <h6
             class="text-center mat-title-large"
