--- a/JICHANGEAPI/Views/Shared/_Layout.cshtml
+++ b/JICHANGEAPI/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <base href="~/Scripts/ClientApp/" />
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/clientapp")
 </head>
